--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* 1. */
 body{
     background: black;
 }
@@ -12,3 +13,5 @@ body{
    font-size: 70px;
    font-family: 'Orbitron', sans-serif;
 }
+
+/* 2. */
