--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 /* 1. */
-body{
+body{ 
+    margin: 0;
+    padding: 0;
     background: black;
 }
 
-.clock{
+/* .clock{
    position: absolute;
    top: 50%;
    left: 30%;
@@ -12,6 +14,69 @@ body{
    font-weight: 400;
    font-size: 70px;
    font-family: 'Orbitron', sans-serif;
-}
+} */
 
 /* 2. */
+.slider{
+    width:100%;
+    height:600px;
+    margin:0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.slide-area{
+    height: 100%;
+}
+.slide-area div{
+    width:100%;
+    height: 100%;
+    position: absolute;
+    transition: all 1s;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+.slider span{
+    height: 50px;
+    position: absolute;
+    top:50%;
+    margin:-25px 0 0 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    color:#fff;
+    line-height: 50px;
+    text-align: center;
+    cursor: pointer;
+}
+.title{
+    top:80% !important;
+    font-size: 30px;
+    font-weight: 800;
+    text-align: center;
+    cursor: auto !important;
+    padding: 0 20px;
+}
+.slide-area{
+    font-size: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+}
+#prev{
+    left:0;
+    border-radius: 0 10px 10px 0;
+}
+#next{
+    right:0;
+    border-radius:10px 0 0 10px;
+}
+#prev svg,#next svg{
+    width:100%;
+    fill: #fff;
+}
+#next svg {
+  transform: rotate(-180deg);
+}
+#prev:hover,
+#next:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+}
