--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body{ 
     margin: 0;
     padding: 0;
-    background: black;
+    background: rgb(241, 239, 239);
 }
 
 /* .clock{
@@ -17,6 +17,10 @@ body{
 } */
 
 /* 2. */
+.slide-box{
+    box-sizing: border-box;
+    width: 100% auto;
+}
 .slider{
     width:100%;
     height:600px;
@@ -36,7 +40,7 @@ body{
     background-position: center center;
     background-repeat: no-repeat;
 }
-.slider span{
+.slide-box span{
     height: 50px;
     position: absolute;
     top:50%;
@@ -80,3 +84,26 @@ body{
 #next:hover{
     background-color: rgba(0, 0, 0, 0.8);
 }
+
+/* 3. */
+.dots{
+    text-align: center;
+}
+.dots {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+    margin: 0 3px;
+    background-color: #acc;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.5s ease;
+    
+  
+  }
+  
+  .enable, .dots:hover {
+    background-color: #717161;
+  }
+ 
+  
